# jobmon

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  README.rst  RESTful.md  build_and_run_tests.sh  build_docker.Jenkinsfile  build_env.sh  central_monitor_logging.yaml  common.sh  conda_environment.yml  conda_requirements.txt  create_users.sh  docker-compose-general.yml  docker-compose-local.yml  docker-compose.yml  env-a.out  env-b.out  fabfile.py  grouptest  install_rcfile.py  job.py  jobmon.cfg  jobmon.env  jobmon_logging.yaml  jobmonrc-docker  jqs_uwsgi.ini  jsm_uwsgi.ini  manager.py  models.py  modout.sh  monitor.py  mypy.ini  (+23 more)
ci/: Jenkinsfile  build_PROD.jenkins  build_RC.jenkins  build_docker.Jenkinsfile  common.sh  deploy.Jenkinsfile  deploy.sh  deploy_conda.Jenkinsfile  deploy_conda_abbr.Jenkinsfile  deploy_docs.Jenkinsfile  deploy_integrator.Jenkinsfile  deploy_server.Jenkinsfile  deploy_utils.sh  pr.Jenkinsfile  pr_merged.Jenkinsfile  pr_merged.jenkins  pr_merged_abbr.Jenkinsfile  pr_opened.Jenkinsfile  pr_raised.jenkins  publish.py  share_conda_install.sh
deployment-tests/: load_test_intermittent_exceptions.py  load_test_timeouts.py  load_test_with_exceptions.py  load_test_with_failures.py  mock_sleep_and_write_task.py  one_phase_load_test.py  six_job_test.py  sleep_and_err.py  three_phase_load_test.py
deployment/ihme_client/: pyproject.toml  setup.cfg  setup.py
deployment/jobmon_installer_ihme/: README.rst  setup.cfg  setup.cfg.j2
deployment/jobmon_installer_ihme/src/jobmon_installer_ihme/: __init__.py  cli.py  server_config.json
deployment/jobmon_installer_ihme/src/jobmon_installer_ihme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deployment_tests/: README.md  bushy_dag_load_test.py  chunk_bind_time_profile.py  create_worker_workflow.py  load_test_intermittent_exceptions.py  load_test_with_failures.py  mock_load_test_task.py  multi_workflow_test.py  one_phase_load_test.py  release.py  six_job_test.py  sleep_and_echo.sh  sleep_and_error.py  three_phase_load_test.py  three_phase_with_files_load_test.py
docsource/: advanced_dependencies.rst  advanced_usage.rst  architecture.rst  azure.rst  conf.py  core_concepts.rst  dag_visualization.rst  database-ihme.rst  database_tables.rst  databases.rst  deployment_units.rst  deployments.rst  design_notes.rst  docker_deployment.rst  experimental_azure_kubernetes_deployment.rst  future_work.rst  glossary.rst  help-ihme.rst  index.rst  job_list_manager.rst  jobmon.client.rst  jobmon.client.swarm.executors.rst  jobmon.client.swarm.job_management.rst  jobmon.client.swarm.rst  jobmon.client.swarm.workflow.rst  jobmon.client.worker_node.rst  jobmon.executors.rst  jobmon.meta_models.rst  jobmon.models.attributes.rst  jobmon.models.rst  jobmon.rst  jobmon.server.health_monitor.rst  jobmon.server.job_query_server.rst  jobmon.server.job_state_manager.rst  jobmon.server.job_visualization_server.rst  jobmon.server.rst  jobmon.services.rst  jobmon.workflow.rst  kubernetes_deployment.rst  modules.rst  (+10 more)
jobmon/: .jobmon.ini  UTC_formatter.py  __init__.py  _version.py  app.py  bootstrap.py  central_job_monitor.py  central_job_monitor_launcher.py  cli.py  client_config.py  command_context.py  conda_utilities.py  config.py  connection.py  connection_config.py  database.py  database_loaders.py  default_config.py  env_submit_master.sh  exceptions.py  executors.py  generic_logging.py  git_utilities.py  job.py  job_factory.py  job_instance_factory.py  job_instance_intercom.py  job_instance_reconciler.py  job_list_manager.py  job_query_server.py  jobmon.cfg  (+26 more)
jobmon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jobmon_core/: pyproject.toml
jobmon_core/src/jobmon/core/: cluster.py  cluster_protocol.py  cluster_type.py  configuration.py  constants.py  requester.py  serializers.py
jobmon_core/src/jobmon/distributor/: __init__.py  cli.py  distributor_service.py  distributor_task_instance.py  task_instance_batch.py
jobmon_core/src/jobmon/plugins/: __init__.py  dummy.py
jobmon_core/src/jobmon/plugins/dummy/: __init__.py
jobmon_core/src/jobmon/plugins/multiprocess/: __init__.py  multiproc_distributor.py  multiproc_queue.py
jobmon_core/src/jobmon/plugins/sequential/: __init__.py  seq_distributor.py  seq_queue.py
jobmon_core/src/jobmon/worker_node/: __init__.py  cli.py  worker_node_factory.py  worker_node_task_instance.py
python/: .flake8  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
python/src/jobmon/: __init__.py  serializers.py
python/src/jobmon/client/: array.py  cli.py  dag.py  task.py  tool_version.py  workflow.py
python/src/jobmon/client/distributor/: cli.py  distributor_task_instance.py  distributor_workflow_run.py
python/src/jobmon/plugins/: dummy.py
python/src/jobmon/plugins/multiprocess/: __init__.py  multiproc_queue.py
python/src/jobmon/server/web/: hooks_and_handlers.py
python/src/jobmon/server/web/models/: tool_version.py  workflow.py
python/src/jobmon/server/web/routes/reaper/: reaper.py
python/tests/: conftest.py
python/tests/builtins/: test_multiprocess_distributor.py  test_sequential_distributor.py
python/tests/cli/: test_cli_routes.py
python/tests/distributor/: test_heartbeat.py
python/tests/end_to_end/: test_scheduler_logging.py  test_workflow_resume.py
python/tests/server/: test_server_logging.py
python/tests/swarm/: test_swarm.py
python/tests/worker_node/: test_task_instance_worker_node.py
(+1265 files in other folders)
