[metadata]
license_file = LICENSE

[flake8]
max-line-length = 95

[tool:pytest]
addopts = --junitxml=test_report.xml --cov=jobmon --cov-report html --cov-config=setup.cfg
log_level=DEBUG
markers =
    unittest
    smoketest
    qsubs_jobs
    cluster
    systemtest
    integration_sge
    integration_tests
    performance_tests

[coverage:run]
branch = True
omit =
  */tests/*
  */jobmon/server/deployment/*
  */archive/*
  */noxfile.py
  */setup.py
  */_version.py
  */jobmon/serializers.py
  */__init__.py
concurrency = multiprocessing

[coverage:html]
directory = jobmon_coverage_html_report
