[metadata]
license_file = LICENSE

[flake8]
max-line-length = 95
ignore = D401, D400, D205, D107, W504
# D401 is for imperative mood linting,
# D400 is for a period at the end of the first line for a multi-line docstring
# D205 is for spacing the 1-line summary and the main docstring in a multi-line docstring
# D107 requires __init__ function to have a docstring
# W504 does not like a line break after a binary operator.
exclude = tests, */__init__.py
# tests are not part of production so don't need to be held to the same doc standards
# __init__ files are often empty

[tool:pytest]
addopts = --junitxml=test_report.xml --cov=jobmon --cov-report html --cov-config=setup.cfg
log_level=DEBUG
markers =
    unittest
    smoketest
    qsubs_jobs
    cluster
    systemtest
    integration_sge
    integration_tests
    performance_tests

[coverage:run]
branch = True
omit =
  */tests/*
  */jobmon/server/deployment/*
  */archive/*
  */noxfile.py
  */setup.py
  */_version.py
  */jobmon/serializers.py
  */__init__.py
concurrency = multiprocessing

[coverage:html]
directory = jobmon_coverage_html_report
