[metadata]
license_files = LICENSE

[tool:pytest]
addopts = --junitxml=test_report.xml --cov=jobmon --cov-report html --cov-config=setup.cfg
markers =
    performance_tests
    usage_integrator

[coverage:run]
branch = True
omit =
  */tests/*
  */noxfile.py
  */setup.py
  */_version.py
  */jobmon/serializers.py
  */__init__.py
concurrency = multiprocessing

[coverage:html]
directory = jobmon_coverage_html_report
