[metadata]
license_files = LICENSE

[tool:pytest]
addopts = --junitxml=python/out/test_report.xml --cov=python/src/jobmon_slurm --cov-report html --cov-config=python/setup.cfg

[coverage:run]
branch = True
omit =
  */tests/*
  */noxfile*.py
  */setup.py
  */_version.py
  */__init__.py
concurrency = multiprocessing

[coverage:html]
directory = server/coverage/coverage_html_report
