[metadata]
name = ihme-client
version = attr: src.ihme_client._version.__version__
description = jobmon client for IHME staff
long_description = file: README.rst, LICENSE

[options]
install_requires =
    jobmon_uge
    jobmon_slurm

[options.packages.find]
where=src

[options.package_data]
ihme_client = server_config.json
