[metadata]
name = jobmon-installer-ihme
version = attr: jobmon_installer_ihme._version.__version__
description = jobmon client for IHME staff
long_description = file: README.rst, LICENSE

[options]
python_requires = >= 3.7
install_requires =
    jobmon_uge
    jobmon_slurm
    jobmon
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
jobmon_installer_ihme = server_config.json
