[metadata]
name = jobmon-installer-ihme
version = 0.0
description = jobmon client for IHME staff
long_description = file: README.rst, LICENSE

[options]
python_requires = >= 3.7
install_requires =
    importlib_metadata
    jobmon == 3.1.0.dev12
    jobmon_uge == 1.0.0
    jobmon_slurm == 1.0.2
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
jobmon_installer_ihme = server_config.json
